# adventofagents

./: .gitignore  README.md  main.py  pyproject.toml
day2/: .env
day2/.adk/: session.db
day3/.adk/: session.db
day6/: README.md  pyproject.toml
day6/.adk/: session.db
day6/app/app_utils/: deploy.py  telemetry.py  typing.py
retail-location-strategy/: .env.example  DEVELOPER_GUIDE.md  Makefile  README.md  pyproject.toml
retail-location-strategy/app/: agent.py  config.py
retail-location-strategy/app/app_utils/: deploy.py  telemetry.py  typing.py
retail-location-strategy/app/callbacks/: __init__.py  pipeline_callbacks.py
retail-location-strategy/app/schemas/: __init__.py  report_schema.py
retail-location-strategy/app/sub_agents/competitor_mapping/: __init__.py  agent.py
retail-location-strategy/app/sub_agents/gap_analysis/: __init__.py  agent.py
retail-location-strategy/app/sub_agents/infographic_generator/: __init__.py  agent.py
retail-location-strategy/app/sub_agents/intake_agent/: __init__.py
retail-location-strategy/app/sub_agents/market_research/: __init__.py  agent.py
retail-location-strategy/app/sub_agents/report_generator/: agent.py
retail-location-strategy/app/sub_agents/strategy_advisor/: __init__.py  agent.py
retail-location-strategy/app/tools/: __init__.py  html_report_generator.py  image_generator.py  places_search.py
retail-location-strategy/samples/: executive_report.html
