[project]
name = "retail-location-strategy"
version = "0.1.0"
description = "Multi-agent AI pipeline for retail site selection using Google ADK"
readme = "README.md"
dependencies = [
    "google-adk>=1.20.0",
    "googlemaps>=4.10.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10,<3.14"